# omnistat

./: .gitignore  CHANGES  CONTRIBUTING.md  LICENSE  README.md  features.tex  omnistat-annotate  omnistat-monitor  omnistat-query  omnistat-rms-env  omnistat-standalone  omnistat-usermode  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  release.yml
.github/workflows/: debug-mi325.yml  debug.yml  debug2-mi325.yml  nightly-wheel.yml  test-gpus.yml  test-mi325-debug.yml  test-mi325.yml  test-mi325b.yml  test-tsdb.yml  test-unit.yml  test-user-push.yml  test.yml
docker/: index.py
docker/grafana/json-models/: job.json
docs/: conf.py  grafana.md  index.md  introduction.md  metrics.md  site.frontier.md  site.tuo.md  sites.md
docs/developer/: collector_uptime.py  dcgm-phase1.md  developers.md
docs/installation/: extensions.md  index.md  system-install.md  user-mode.md
docs/static/: custom.css
grafana/: Makefile  README.md
grafana/json-models/system/: rms-global.json  rms-job.json  rms-node.json  standalone-global.json  standalone-node.json
grafana/scripts/: filter-dashboard  sync-dashboards
grafana/source/: global.json  job.json  node.json
misc/: omnistat-ornl
omnistat/: annotate.py  collector_amdsmi.py  collector_base.py  collector_definitions.json  collector_definitions.py  collector_endpoint_base.py  collector_events.py  collector_host.py  collector_info.py  collector_kernel_trace.py  collector_network.py  collector_nvidia_dcgm.py  collector_pm_counters.py  collector_rms.py  collector_rocmsmi.py  collector_rocprofiler.py  collector_rocprofiler_sdk.py  collector_smi.py  collector_smi_process.py  collector_smi_v2.py  monitor.py  node_monitoring.py  omni_util.py  query.py  rms_env.py  standalone.py  utils.py
omnistat/collectors/: amd_smi.py  rocm_smi.py  vendor_counters.py
omnistat/config/: omnistat.default  omnistat.llnl  omnistat.ornl  omnistat.ornl.external
omnistat/contrib/: collector_kmsg.py  collector_network.py  collector_network_cxi.py
omnistat/rocprofiler/: __init__.py
rocprofiler-sdk/: .clang-format  CMakeLists.txt  README.md  binding.cpp  common.hpp  counter_enabler.cpp  counter_enabler.hpp  device.cpp  device.hpp  kernel_tracer.cpp  kernel_tracer.hpp
skills/load-database/: SKILL.md
test/: README.md  config.py  generate_kernels.py  generate_telemetry.py  test_collectors.py  test_endpoint_collectors.py  test_integration.py  test_job_system.py  test_job_user_pull.py  test_job_user_push.py  test_kernel_trace.py  test_query.py  test_smi.py  test_tsdb_kernel_trace.py  test_tsdb_query.py  test_unit_kernel_trace.py
test/docker/slurm/: compose.yaml  omnistat-system.config  omnistat-user.config  prometheus.yml
test/workloads/: Makefile  __init__.py  common.hpp  launch_kernels.cpp  vector_add.cpp
